# Coral

./: CMakeLists.txt  ast_tree_generator.cpp  ast_tree_generator.hpp  control_flow_graph.cpp  control_flow_graph.hpp  coralBaseListener.cpp  coralBaseListener.h  ir_generation.cpp  ir_generation.hpp  main.cpp  semantic_analysis.cpp  semantic_analysis.hpp  test.clr  zeromqpublisher.cpp
Frontend/: a.out  lex.yy.c  lexer  lexer.cpp  lexer.l  lexer2  parser.cpp  parser.hpp  program  test copy.clr  test.clr
tests/: loop_ir_test.cpp
